fixed bugs on web UI

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=80
 mqtt.broker=tcp://server.vm:1884
 #IT WORKS         ^^^^^^^^^
 #mqtt.broker=tcp://192.168.88.251:1884
-mqtt.topic=rozhlas
+mqtt.topic=zvonenie
 mqtt.username=apiClient
 mqtt.password=client123
 mqtt.clientid=client
