--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.output.ansi.enabled=always
 server.port=80
-mqtt.broker=tcp://server.vm:1884
+#mqtt.broker=tcp://server.vm:1884
 #IT WORKS         ^^^^^^^^^
-#mqtt.broker=tcp://192.168.88.251:1884
+mqtt.broker=tcp://192.168.88.251:1884
 mqtt.topic=zvonenie
 mqtt.username=apiClient
 mqtt.password=client123
-mqtt.clientid=client
+mqtt.clientid=clientAPI
