--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ mqtt.topic=zvonenie
 mqtt.username=apiClient
 mqtt.password=client123
 mqtt.clientid=clientAPI
-cron.expression=0 10 18 * * *
+time.mode=1
