seding esp to sleep during night and weekend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,9 @@ mqtt.topic=zvonenie
 mqtt.username=apiClient
 mqtt.password=client123
 mqtt.clientid=clientAPI
+# 0 = long 1 = short
 time.mode=1
+# od 15:10 do 5:55
+time.sleep=885
+# uspanie na 23h 55m
+time.sleep.long=1435
