--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.port=80
 #IT WORKS         ^^^^^^^^^
 mqtt.broker=tcp://192.168.88.251:1884
 mqtt.topic=zvonenie
-mqtt.username=username
-mqtt.password=password
-mqtt.clientid=API
+mqtt.username=apiClient
+mqtt.password=client123
+mqtt.clientid=clientAPI
 # 0 = long 1 = short
 time.mode=0
 # od 15:10 do 5:55
